@@ -3,45 +3,16 @@ package husniddin.online_store.config;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.cache.Cache;
-import org.springframework.cache.annotation.CachingConfigurer;
-import org.springframework.cache.interceptor.CacheErrorHandler;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.scheduling.annotation.EnableAsync;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
-@EnableAsync
-@Slf4j
-public class AppConfig implements CachingConfigurer {
-
-    @Override
-    public CacheErrorHandler errorHandler() {
-        return new CacheErrorHandler() {
-            @Override
-            public void handleCacheGetError(RuntimeException e, Cache cache, Object key) {
-                log.warn("Cache GET error on '{}' key='{}': {}", cache.getName(), key, e.getMessage());
-            }
-            @Override
-            public void handleCachePutError(RuntimeException e, Cache cache, Object key, Object value) {
-                log.warn("Cache PUT error on '{}' key='{}': {}", cache.getName(), key, e.getMessage());
-            }
-            @Override
-            public void handleCacheEvictError(RuntimeException e, Cache cache, Object key) {
-                log.warn("Cache EVICT error on '{}' key='{}': {}", cache.getName(), key, e.getMessage());
-            }
-            @Override
-            public void handleCacheClearError(RuntimeException e, Cache cache) {
-                log.warn("Cache CLEAR error on '{}': {}", cache.getName(), e.getMessage());
-            }
-        };
-    }
+public class AppConfig {
 
     @Bean
     public ObjectMapper objectMapper() {
@@ -54,9 +25,9 @@ public class AppConfig implements CachingConfigurer {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(List.of("*"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+        config.setAllowedOriginPatterns(Arrays.asList("*"));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        config.setAllowedHeaders(Arrays.asList("*"));
         config.setAllowCredentials(true);
         config.setMaxAge(3600L);
 
